Reworked http client structure and added getPassword function to it